--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="./style/style.css">
 	<title>Shop54</title>
+	<script src="./src/index.js" defer></script>
 </head>
 
 <body>
@@ -83,6 +84,16 @@
 								<input type="checkbox" class="filter-check_checkbox" id="discount-checkbox">
 								<span class="filter-check_checkmark"></span>
 								<span class="filter-check_label-text">Акция</span>
+							</label>
+							<label class="filter-check_label">
+								<input type="checkbox" class="filter-check_checkbox" id="discount-checkbox">
+								<span class="filter-check_checkmark"></span>
+								<span class="filter-check_label-text">В наличии</span>
+							</label>
+							<label class="filter-check_label">
+								<input type="checkbox" class="filter-check_checkbox" id="discount-checkbox">
+								<span class="filter-check_checkmark"></span>
+								<span class="filter-check_label-text">Топ</span>
 							</label>
 						</div>
 					</div>
