--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="row justify-content-between align-items-center">
 					<h1 class="logo">Shop54</h1>
 					<div class="catalog-button">
-						<button><span class="catalog-button_burger"></span>Каталог</button>
+						<button><span class="catalog-button_burger"></span>Katalog</button>
 						<div class="catalog">
 							<ul class="catalog-list">
 
@@ -48,7 +48,7 @@
 									d="M6 6a4 4 0 0 1 4-4h4a4 4 0 0 1 4 4v2h5.133L21.82 18.496A4 4 0 0 1 17.85 22H6.149a4 4 0 0 1-3.969-3.504L.867 8H6V6zm6 2a1 1 0 0 1 0 2H3.133l1.03 8.248A2 2 0 0 0 6.149 20h11.704a2 2 0 0 0 1.984-1.752L20.867 10H16V6a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v2h4z">
 								</path>
 							</svg></span>
-						<span class="desc">Корзина</span>
+						<span class="desc">Warenkorb</span>
 					</a>
 				</div>
 			</div>
@@ -61,20 +61,20 @@
 				<div class="col-3 col-xl-2 d-none d-lg-block">
 					<div class="filter">
 						<div class="filter-title">
-							<h5>Фильтр</h5>
+							<h5>Filter</h5>
 						</div>
 						<div class="filter-price">
 							<div class="filter-price_title">
-								Цена
+								Preis
 							</div>
 							<form>
 								<div class="filter-price_range">
 									<div class="filter-price_input-wrapper">
-										<label for="min" class="filter-price_label">от</label>
+										<label for="min" class="filter-price_label">von</label>
 										<input id="min" class="filter-price_input">
 									</div>
 									<div class="filter-price_input-wrapper">
-										<label for="max" class="filter-price_label">до</label>
+										<label for="max" class="filter-price_label">bis</label>
 										<input id="max" class="filter-price_input"></div>
 								</div>
 							</form>
@@ -83,17 +83,17 @@
 							<label class="filter-check_label">
 								<input type="checkbox" class="filter-check_checkbox" id="discount-checkbox">
 								<span class="filter-check_checkmark"></span>
-								<span class="filter-check_label-text">Акция</span>
+								<span class="filter-check_label-text">Werbung</span>
 							</label>
 							<label class="filter-check_label">
 								<input type="checkbox" class="filter-check_checkbox" id="discount-checkbox">
 								<span class="filter-check_checkmark"></span>
-								<span class="filter-check_label-text">В наличии</span>
+								<span class="filter-check_label-text">Auf Lager</span>
 							</label>
 							<label class="filter-check_label">
 								<input type="checkbox" class="filter-check_checkbox" id="discount-checkbox">
 								<span class="filter-check_checkmark"></span>
-								<span class="filter-check_label-text">Топ</span>
+								<span class="filter-check_label-text">Тоp</span>
 							</label>
 						</div>
 					</div>
@@ -109,9 +109,9 @@
 											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1033180284.jpg')"></span>
 									</div>
 									<div class="card-body justify-content-between">
-										<div class="card-price">33990 ₽</div>
-										<h5 class="card-title">Игровая приставка Sony PlayStation 4 Pro</h5>
-										<button class="btn btn-primary">В корзину</button>
+										<div class="card-price">339 €</div>
+										<h5 class="card-title">Spielkonsole Sony PlayStation 4 Pro</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
 									</div>
 								</div>
 							</div>
@@ -123,9 +123,9 @@
 											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1027495663.jpg')"></span>
 									</div>
 									<div class="card-body justify-content-between">
-										<div class="card-price">16499 ₽</div>
-										<h5 class="card-title">Игровая приставка Sony PlayStation 3 Super Slim</h5>
-										<button class="btn btn-primary">В корзину</button>
+										<div class="card-price">164 €</div>
+										<h5 class="card-title">Spielkonsole Sony PlayStation 3 Super Slim</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
 									</div>
 								</div>
 							</div>
@@ -136,9 +136,9 @@
 											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1024358491.jpg')"></span>
 									</div>
 									<div class="card-body justify-content-between">
-										<div class="card-price">39990 ₽</div>
-										<h5 class="card-title">Игровая приставка Xbox One X</h5>
-										<button class="btn btn-primary">В корзину</button>
+										<div class="card-price">399 €</div>
+										<h5 class="card-title">Spielkonsole Xbox One X</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
 									</div>
 								</div>
 							</div>
@@ -150,9 +150,9 @@
 											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1024822131.jpg')"></span>
 									</div>
 									<div class="card-body justify-content-between">
-										<div class="card-price">23411 ₽</div>
-										<h5 class="card-title">Игровая приставка Xbox One S</h5>
-										<button class="btn btn-primary">В корзину</button>
+										<div class="card-price">234 €</div>
+										<h5 class="card-title">Spielkonsole Xbox One S</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
 									</div>
 								</div>
 							</div>
@@ -163,9 +163,9 @@
 											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1021386685.jpg')"></span>
 									</div>
 									<div class="card-body justify-content-between">
-										<div class="card-price">24751 ₽</div>
-										<h5 class="card-title">Игровая приставка Nintendo Switch</h5>
-										<button class="btn btn-primary">В корзину</button>
+										<div class="card-price">247 €</div>
+										<h5 class="card-title">Spielkonsole Nintendo Switch</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
 									</div>
 								</div>
 							</div>
@@ -177,9 +177,9 @@
 											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1024928305.jpg')"></span>
 									</div>
 									<div class="card-body justify-content-between">
-										<div class="card-price">3624 ₽</div>
-										<h5 class="card-title">Игровая приставка Sega Retro Genesis HD</h5>
-										<button class="btn btn-primary">В корзину</button>
+										<div class="card-price">49 €</div>
+										<h5 class="card-title">Spielkonsoleа Sega Retro Genesis HD</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
 									</div>
 								</div>
 							</div>
@@ -191,9 +191,9 @@
 											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1021877092.jpg')"></span>
 									</div>
 									<div class="card-body justify-content-between">
-										<div class="card-price">1551 ₽</div>
-										<h5 class="card-title">Игровая приставка Dendy Junior</h5>
-										<button class="btn btn-primary">В корзину</button>
+										<div class="card-price">155 €</div>
+										<h5 class="card-title">Spielkonsole Dendy Junior</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
 									</div>
 								</div>
 							</div>
@@ -204,9 +204,9 @@
 											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1025222877.jpg')"></span>
 									</div>
 									<div class="card-body justify-content-between">
-										<div class="card-price">10445 ₽</div>
-										<h5 class="card-title">Игровая приставка Sony PlayStation Classic</h5>
-										<button class="btn btn-primary">В корзину</button>
+										<div class="card-price">104 €</div>
+										<h5 class="card-title">Spielkonsole Sony PlayStation Classic</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
 									</div>
 								</div>
 							</div>
@@ -223,15 +223,15 @@
 
 	<div class="cart">
 		<div class="cart-body">
-			<div class="cart-title">Корзина</div>
-			<div class="cart-total">Общая сумма: <span>0</span> руб</div>
+			<div class="cart-title">Warenkorb</div>
+			<div class="cart-total">Gesamtsumme: <span>0</span> €</div>
 
 			<div class="cart-wrapper">
 				<div id="cart-empty">
-					Ваша корзина пока пуста
+					Ihr Warenkorb ist im Moment leer
 				</div>
 			</div>
-			<button class="btn btn-primary cart-confirm">Оформить заказ</button>
+			<button class="btn btn-primary cart-confirm">Bestellung aufgeben</button>
 			<div class="cart-close">
 
 			</div>
