--- a/index.html
+++ b/index.html
@@ -102,7 +102,114 @@
 					<div class="container">
 						<div class="row no-gutters goods">
 							<!-- КАРТОЧКИ ТОВАРОВ -->
-							
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<span class="card-img-top"
+											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1033180284.jpg')"></span>
+									</div>
+									<div class="card-body justify-content-between">
+										<div class="card-price">339 €</div>
+										<h5 class="card-title">Spielekonsole Sony PlayStation 4 Pro</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="card">
+									<div class="card-sale">🔥Hot Sale🔥</div>
+									<div class="card-img-wrapper">
+										<span class="card-img-top"
+											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1027495663.jpg')"></span>
+									</div>
+									<div class="card-body justify-content-between">
+										<div class="card-price">164 €</div>
+										<h5 class="card-title">Spielekonsole Sony PlayStation 3 Super Slim</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<span class="card-img-top"
+											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1024358491.jpg')"></span>
+									</div>
+									<div class="card-body justify-content-between">
+										<div class="card-price">399 €</div>
+										<h5 class="card-title">Spielekonsole Xbox One X</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="card">
+									<div class="card-sale">🔥Hot Sale🔥</div>
+									<div class="card-img-wrapper">
+										<span class="card-img-top"
+											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1024822131.jpg')"></span>
+									</div>
+									<div class="card-body justify-content-between">
+										<div class="card-price">234 €</div>
+										<h5 class="card-title">Spielekonsole Xbox One S</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<span class="card-img-top"
+											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1021386685.jpg')"></span>
+									</div>
+									<div class="card-body justify-content-between">
+										<div class="card-price">247 €</div>
+										<h5 class="card-title">Spielekonsole Nintendo Switch</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="card">
+									<div class="card-sale">🔥Hot Sale🔥</div>
+									<div class="card-img-wrapper">
+										<span class="card-img-top"
+											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1024928305.jpg')"></span>
+									</div>
+									<div class="card-body justify-content-between">
+										<div class="card-price">362 €</div>
+										<h5 class="card-title">Spielekonsole Sega Retro Genesis HD</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="card">
+									<div class="card-sale">🔥Hot Sale🔥</div>
+									<div class="card-img-wrapper">
+										<span class="card-img-top"
+											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1021877092.jpg')"></span>
+									</div>
+									<div class="card-body justify-content-between">
+										<div class="card-price">155 €</div>
+										<h5 class="card-title">Spielekonsole Dendy Junior</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="card">
+									<div class="card-img-wrapper">
+										<span class="card-img-top"
+											style="background-image: url('https://cdn1.ozone.ru/multimedia/c400/1025222877.jpg')"></span>
+									</div>
+									<div class="card-body justify-content-between">
+										<div class="card-price">104 €</div>
+										<h5 class="card-title">Spielekonsole Sony PlayStation Classic</h5>
+										<button class="btn btn-primary">In den Warenkorb</button>
+									</div>
+								</div>
+							</div>
 							<!-- END КАРТОЧКИ ТОВАРОВ -->
 						</div>
 					</div>
